src/component/chat_view/snapshots/envision__component__chat_view__snapshot_tests__snapshot_empty.snap
---
source: src/component/chat_view/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────┐
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────┐
│Type a message...                                         │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
