src/component/chat_view/snapshots/envision__component__chat_view__snapshot_tests__snapshot_focused_history.snap
---
source: src/component/chat_view/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────┐
│You:                                                      │
│  Message 1                                               │
│Assistant:                                                │
│  Reply 1                                                 │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────┐
│Type a message...                                         │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
