src/component/chat_view/snapshots/envision__component__chat_view__snapshot_tests__snapshot_focused_input.snap
---
source: src/component/chat_view/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────┐
│You:                                                      │
│  Hello                                                   │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────┐
│Test                                                      │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
