src/component/chat_view/snapshots/envision__component__chat_view__snapshot_tests__snapshot_multi_role.snap
---
source: src/component/chat_view/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────┐
│System:                                                   │
│  Welcome to the chat!                                    │
│You:                                                      │
│  Hello                                                   │
│Assistant:                                                │
│  Hi there! How can I help?                               │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────┐
│Type a message...                                         │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
