src/component/chat_view/snapshots/envision__component__chat_view__snapshot_tests__snapshot_single_user_message.snap
---
source: src/component/chat_view/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────┐
│You:                                                      │
│  Hello, world!                                           │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────┐
│Type a message...                                         │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
